feat: pagination, sorting, filter

--- a/src/components/screens/Home/index.css
+++ b/src/components/screens/Home/index.css
@@ -38,6 +38,10 @@ input, select {
     font-size: 1rem;
 }
 
+.react-datepicker-wrapper{
+    width: 100%;
+}
+
 input:focus, select:focus {
     border-color: #007BFF;
     outline: none;
