feat: employee list test (wip), add error message to table

--- a/src/components/screens/Employee/table.css
+++ b/src/components/screens/Employee/table.css
@@ -14,4 +14,10 @@
   .page-filter{
     width: 100%;
     display: flex;
+    justify-content: space-between;
+  }
+  .filter-bottom{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
   }
