feat: validation modal

--- a/src/components/screens/Home/index.css
+++ b/src/components/screens/Home/index.css
@@ -101,3 +101,9 @@ legend {
 .modal.hidden {
     display: none;
 }
+.blur-background{
+    z-index: 0;
+    filter: blur(4px);
+    opacity: 0.6;
+    pointer-events: none;
+}
