--- a/src/components/screens/Home/index.css
+++ b/src/components/screens/Home/index.css
@@ -101,9 +101,8 @@ legend {
 .modal.hidden {
     display: none;
 }
-.blur-background{
-    z-index: 0;
-    filter: blur(4px);
-    opacity: 0.6;
-    pointer-events: none;
-}
+.dark-overlay {
+    background-color: rgba(0, 0, 0, 0.4);
+    transition: background-color 0.3s ease;
+    pointer-events: none; 
+  }
