--- a/src/components/screens/Employee/table.css
+++ b/src/components/screens/Employee/table.css
@@ -21,3 +21,39 @@
     width: 100%;
     justify-content: space-between;
   }
+  @media (max-width: 480px) {
+    #employee-table {
+      display: block;
+      border: none;
+    }
+  
+    #employee-table thead {
+      display: none; 
+    }
+    #employee-table tbody{
+      width: 450px !important;
+    }
+  
+    #employee-table tbody tr {
+      display: block;
+      margin-bottom: 10px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 10px;
+      width: 450px !important;
+    }
+  
+    #employee-table tbody td {
+      display: flex;
+      justify-content: center;  
+      padding: 8px 4px;
+    }
+  
+    #employee-table tbody td:before {
+      content: attr(data-label);
+      font-weight: bold;
+      margin-right: 10px;
+    }
+  }
+  
+  
