--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+@media (max-width: 480px){
+  body{
+    overflow-x: hidden;
+  }
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
