--- a/src/components/screens/Home/index.css
+++ b/src/components/screens/Home/index.css
@@ -16,7 +16,7 @@
     background-color: #f9f9f9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 100%;
+    margin: 10rem;
 }
 
 label {
@@ -111,6 +111,7 @@ legend {
 }
 @media (max-width: 480px){
     .container{
-        padding: 0;
+        padding: 2rem;
+        margin: 2rem;
     }
 }
